# botds

./: historico.json  main.py  metas.json  pyproject.toml  replit.nix  requirements.txt
app/: github_uploader.py  main.py
