[project]
name = "python-template"
version = "0.1.0"
description = ""
requires-python = ">=3.11"

dependencies = [
    "py-cord>=2.5.2",
    "groq>=0.22.0",
    "python-dotenv>=1.1.0",
    "PyNaCl>=1.5.0",
    "google-search-results>=2.0.0",
    "flask>=2.2.5",
    "google-generativeai>=0.5.0",
    "aiohttp>=3.9.0",
    "Pillow>=10.0.0",
]


